<resources>
    <string name="app_name">CradleWedgeDemo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="flashled_button">Flash LED</string>
    <string name="unlock_button">Unlock</string>
    <string name="info_button">Info</string>
    <string name="diagnostics_button">Diagn.</string>
    <string name="getlocation_button">GetLoc.</string>
    <string name="setlocation_button">SetLoc.</string>
    <string name="Content">Cradle Wedge Demo App</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
</resources>