<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.CradleWedge.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="504dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/Content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <RelativeLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.CradleWedge.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/start_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/start_button"
                android:textColor="@color/black"
                tools:ignore="Suspicious0dp"
                android:visibility="visible"/>

            <Button
                android:id="@+id/stop_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/stop_button"
                android:textColor="@color/black"
                tools:ignore="Suspicious0dp"
                android:visibility="invisible"/>


            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_button"
                tools:ignore="Suspicious0dp" />

            <Button
                android:id="@+id/flashled_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/white"
                android:text="@string/flashled_button"
                android:textColor="@color/black"
                android:visibility="visible" />

            <Button
                android:id="@+id/unlock_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/white"
                android:text="@string/unlock_button"
                android:textColor="@color/black"
                android:visibility="visible" />

            <Button
                android:id="@+id/info_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/white"
                android:text="@string/info_button"
                android:textColor="@color/black"
                android:visibility="visible" />

            <Button
                android:id="@+id/diagnostics_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:text="@string/diagnostics_button"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/setlocation_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:text="@string/setlocation_button"
                android:textColor="@color/black"
                android:visibility="visible" />

            <Button
                android:id="@+id/getlocation_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:text="@string/getlocation_button"
                android:textColor="@color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextColumn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:autofillHints="column"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="column"
                android:inputType="number"
                android:textColor="@color/white" />


            <EditText
                android:id="@+id/editTextRow"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/editTextColumn"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="row"
                android:inputType="number"
                android:textColor="@color/white" />


            <EditText
                android:id="@+id/editTextWall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/editTextRow"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="wall"
                android:inputType="number"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/fastChargecheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextRow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="FastCharge"
                android:textColor="@color/white" />



        </RelativeLayout>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="613dp"
            android:textColor="@color/white"
            android:textSize="22px" />


    </FrameLayout>

</FrameLayout>